<resources>
    <string name="app_name">EngLearn2</string>
    <string name="bnb_home_title">Главная</string>
    <string name="bnb_library_title">Библиотека</string>
    <string name="bnb_menu_title">Меню</string>
    <string name="bnb_profile_title">Профиль</string>
    <string name="bnb_statistic_title">Статистика</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>